tests/tooling/fixtures/native/recovery/negative/negative_binary_literal_global_divide_by_zero.objc3
// Expected diagnostic code(s): O3S210.
module NegativeBinaryLiteralGlobalDivideByZero;

let value = 0b10 / 0b0;

fn main() -> i32 {
  return value;
}
